--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/jdj-logo.png" rel="icon">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -158,18 +157,24 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-4 ">
-            <div class="float-end">No. 21B, Batu 13, Kampung Simpang Balak, <br>Jalan Cheras, 43000 Kajang,<br> Selangor Darul Ehsan</div>
+
+            <div class="float-end">
+              <div class="icon-bg-gold"><i class="bi bi-at"></i></div>
+              No. 21B, Batu 13, Kampung Simpang Balak, <br>Jalan Cheras, 43000 Kajang, <br>Selangor Darul Ehsan
+            </div>
             
           </div>
-          <div class="col-lg-4 col-md-4">
-            <div style="margin: auto; width: 66%;">
-              <p class="mb-1">+60 13-721 4393&nbsp;&nbsp;&nbsp;&nbsp;+60 11-1290 1176</p>
-              <p class="mb-1">+60 18-973 4393&nbsp;&nbsp;&nbsp;&nbsp;+60 10-268 1176</p>  
+          <div class="col-lg-5 col-md-4 ">
+            <div style="margin: auto; width: 60%;">
+              <div class="icon-bg-gold"><i class="bi bi-phone phone-icon"></i></div>
+              <p class="mb-0">+60 13-721 4393&nbsp;&nbsp;&nbsp;&nbsp;+60 11-1290 1176</p>
+              <p class="mb-0">+60 18-973 4393&nbsp;&nbsp;&nbsp;&nbsp;+60 10-268 1176</p>  
             </div>
           </div>
-          <div class="col-lg-4 col-md-4">
-            <p class="mb-1">jdjtechnology20@gmail.com</p>
-            <p class="mb-1">thila716@gmail.com</p>
+          <div class="col-lg-3 col-md-4">            
+            <div class="icon-bg-gold"><i class="bi bi-envelope mail-icon"></i></div>
+            <p class="mb-0">jdjtechnology20@gmail.com</p>
+            <p class="mb-0">thila716@gmail.com</p>
           </div>
 
         </div>
